backface visibility fix

--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -211,6 +211,10 @@ nav{
 				// padding: 5em 20em 0;
 				color: #fff;
 				// text-shadow: 0px 0px 23px #000000;
+				-webkit-backface-visibility: hidden;
+				-moz-backface-visibility: hidden;
+				-ms-backface-visibility: hidden;
+				-backface-visibility: hidden;
 				font-size: 65%;
 				h1{
 					font-size:3em;
